--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a href="" class="nav-link">Students Program</a>
+                  <a href="students_programming/index.html" class="nav-link"
+                    >Students Program</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a href="demo-marketing-team.html" class="nav-link">Team</a>
