--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a href="students_programming/index.html" class="nav-link"
+                  <a href="students_programming" class="nav-link"
                     >Students Program</a
                   >
                 </li>
