--- a/index.html
+++ b/index.html
@@ -43,34 +43,37 @@
     <!-- start header -->
     <header>
       <!-- start navigation -->
-      <nav
-        class="navbar navbar-expand-lg header-light header-transparent bg-transparent disable-fixed"
-      >
-        <div class="container-fluid">
-          <div class="col-auto col-lg-2 me-lg-0 me-auto">
-            <a class="navbar-brand" href="demo-marketing.html">
-              <img
-                src="images/demo-marketing-logo-black.png"
-                data-at2x="images/demo-marketing-logo-black@2x.png"
-                alt=""
-                class="default-logo"
-              />
-              <img
-                src="images/demo-marketing-logo-black.png"
-                data-at2x="images/demo-marketing-logo-black@2x.png"
-                alt=""
-                class="alt-logo"
-              />
-              <img
-                src="images/demo-marketing-logo-black.png"
-                data-at2x="images/demo-marketing-logo-black@2x.png"
-                alt=""
-                class="mobile-logo"
-              />
-            </a>
-          </div>
-          <div class="col-auto menu-order position-static">
-            <button
+      <div class="container-fluid">
+        <div class="row m-0">
+          <nav
+            class="navbar navbar-expand-lg header-light header-transparent bg-transparent"
+          >
+          <div class="ps-4">
+          <ul class="nav nav-pills d-flex justify-content-between align-items-center">
+            <li class="nav-item">
+              <a class="navbar-brand" href="demo-marketing.html">
+                <img
+                  src="images/demo-marketing-logo-black.png"
+                  data-at2x="images/demo-marketing-logo-black@2x.png"
+                  alt=""
+                  class="default-logo"
+                />
+                <img
+                  src="images/demo-marketing-logo-black.png"
+                  data-at2x="images/demo-marketing-logo-black@2x.png"
+                  alt=""
+                  class="alt-logo"
+                />
+                <img
+                  src="images/demo-marketing-logo-black.png"
+                  data-at2x="images/demo-marketing-logo-black@2x.png"
+                  alt=""
+                  class="mobile-logo"
+                />
+              </a>
+            </li>
+            <li class="nav-item">
+              <button
               class="navbar-toggler float-start"
               type="button"
               data-bs-toggle="collapse"
@@ -89,7 +92,9 @@
                   <a href="demo-marketing.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a href="demo-marketing-about.html" class="nav-link">About</a>
+                  <a href="demo-marketing-about.html" class="nav-link"
+                    >About</a
+                  >
                 </li>
                 <li class="nav-item dropdown dropdown-with-icon">
                   <a href="demo-marketing-services.html" class="nav-link"
@@ -154,17 +159,23 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a href="demo-marketing-case-studies.html" class="nav-link"
+                  <a
+                    href="demo-marketing-case-studies.html"
+                    class="nav-link"
                     >Case studies</a
                   >
                 </li>
                 <li class="nav-item">
                   <a href="students_programming" class="nav-link"
-                    ><span class="badge_highlight">Students Program</span></a
+                    ><span class="badge_highlight"
+                      >Students Program</span
+                    ></a
                   >
                 </li>
                 <li class="nav-item">
-                  <a href="demo-marketing-team.html" class="nav-link">Team</a>
+                  <a href="demo-marketing-team.html" class="nav-link"
+                    >Team</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a href="demo-marketing-contact.html" class="nav-link"
@@ -173,144 +184,152 @@
                 </li>
               </ul>
             </div>
-          </div>
-          <div class="col-auto col-lg-2 text-end">
-            <div class="header-icon">
-              <div class="header-social-icon icon">
-                <a href="http://www.facebook.com" target="_blank"
-                  ><i class="fa-brands fa-facebook-f"></i
-                ></a>
-                <a href="http://www.instagram.com" target="_blank"
-                  ><i class="fa-brands fa-instagram"></i
-                ></a>
-                <a href="http://www.twitter.com" target="_blank"
-                  ><i class="fa-brands fa-twitter"></i
-                ></a>
+            </li>
+            <li class="nav-item">
+              <div class="header-icon">
+                <div class="header-social-icon icon">
+                  <a href="http://www.facebook.com" target="_blank"
+                    ><i class="fa-brands fa-facebook-f"></i
+                  ></a>
+                  <a href="http://www.instagram.com" target="_blank"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                  <a href="http://www.twitter.com" target="_blank"
+                    ><i class="fa-brands fa-twitter"></i
+                  ></a>
+                </div>
               </div>
-            </div>
-          </div>
+            </li>
+          </ul>
         </div>
-      </nav>
+        </nav>
+        </div>
+      </div>
+
       <!-- end navigation -->
     </header>
     <!-- end header -->
     <!-- start banner -->
-    <section
-      class="p-0 full-screen md-h-600px sm-h-600px ipad-top-space-margin background-position-center-top position-relative lg-overflow-hidden"
-      style="background-image: url('images/demo-marketing-dot.svg')"
-    >
+    <section>
       <div
-        class="bg-gradient-black-green position-absolute left-0px top-0px h-100 w-100 z-index-minus-1"
-      ></div>
-      <div class="container h-100">
-        <div class="row align-items-center h-100">
-          <div
-            class="col-lg-6 col-md-9 position-relative z-index-1 d-flex flex-column justify-content-center h-100"
-          >
+        class="p-0 full-screen md-h-600px sm-h-600px ipad-top-space-margin background-position-center-top position-relative lg-overflow-hidden"
+        style="background-image: url('images/demo-marketing-dot.svg')"
+      >
+        <div
+          class="bg-gradient-black-green position-absolute left-0px top-0px h-100 w-100 z-index-minus-1"
+        ></div>
+        <div class="container h-100">
+          <div class="row align-items-center h-100">
             <div
-              class="fs-120 lg-fs-100 text-dark-gray lh-100 fw-500 mb-6 ls-minus-5px fancy-text-style-4"
-              data-anime='{ "el": "childs", "opacity": [0, 1], "translateX": [-100, 0], "staggervalue": 300, "duration": 1000, "easing": "easeOutCubic" }'
+              class="col-lg-6 col-md-9 position-relative z-index-1 d-flex flex-column justify-content-center h-100"
             >
-              <span class="d-inline-block">Business</span>
-              <span
-                class="fw-700 d-inline-block"
-                data-fancy-text='{ "effect": "wave", "string": ["strategy", "approach", "planning"], "duration": 4000 }'
-              ></span>
-            </div>
-            <div
-              class="fs-20 lh-34 xs-fs-19 mb-35px xs-mb-20px w-85 lg-w-95 sm-w-100 ls-minus-05px"
-              data-anime='{ "opacity": [0, 1], "translateX": [-100, 0], "duration": 1000, "delay": 1000, "easing": "easeOutCubic" }'
-            >
-              We do our best to implement your ideas into the project to make it
-              successful & profitable.
-            </div>
-            <div
-              data-anime='{ "el": "childs", "opacity": [0, 1], "translateX": [-100, 0], "staggervalue": -200, "duration": 1000, "delay": 1500, "easing": "easeOutCubic" }'
-            >
-              <a
-                href="index.html"
-                target="_blank"
-                class="btn btn-extra-large btn-dark-gray btn-hover-animation-switch btn-round-edge btn-box-shadow me-20px fw-400 xs-mt-10px xs-mb-10px"
+              <div
+                class="fs-120 lg-fs-70 text-dark-gray lh-100 fw-500 mb-6 ls-minus-5px fancy-text-style-4"
+                data-anime='{ "el": "childs", "opacity": [0, 1], "translateX": [-100, 0], "staggervalue": 300, "duration": 1000, "easing": "easeOutCubic" }'
               >
-                <span>
-                  <span class="btn-text">Discover crafto</span>
-                  <span class="btn-icon"
-                    ><i class="feather icon-feather-arrow-right"></i
-                  ></span>
-                  <span class="btn-icon"
-                    ><i class="feather icon-feather-arrow-right"></i
-                  ></span>
-                </span>
-              </a>
-              <a
-                href="index.html"
-                target="_blank"
-                class="btn btn-extra-large btn-white btn-round-edge btn-box-shadow btn-round-edge fw-600 xs-mt-10px xs-mb-10px"
-                >Get started</a
+                <span class="d-inline-block">Business</span>
+                <span
+                  class="fw-700 d-inline-block"
+                  data-fancy-text='{ "effect": "wave", "string": ["strategy", "approach", "planning"], "duration": 4000 }'
+                ></span>
+              </div>
+              <div
+                class="fs-20 lh-34 xs-fs-19 mb-35px xs-mb-20px w-85 lg-w-95 sm-w-100 ls-minus-05px"
+                data-anime='{ "opacity": [0, 1], "translateX": [-100, 0], "duration": 1000, "delay": 1000, "easing": "easeOutCubic" }'
               >
-            </div>
-            <div
-              class="row w-100 position-absolute md-position-relative bottom-0 mb-14 md-mb-0 md-mt-40px sm-mt-30px xs-mt-20px align-items-center"
-              data-anime='{ "el": "childs", "opacity": [0, 1], "staggervalue": -200, "translateX": [-100, 0], "duration": 1000, "delay": 1700, "easing": "easeOutQuad" }'
-            >
-              <div class="col-xl-5 col-sm-6 icon-with-text-style-08 xs-mb-15px">
+                We do our best to implement your ideas into the project to make
+                it successful & profitable.
+              </div>
+              <div
+                data-anime='{ "el": "childs", "opacity": [0, 1], "translateX": [-100, 0], "staggervalue": -200, "duration": 1000, "delay": 1500, "easing": "easeOutCubic" }'
+              >
+                <a
+                  href="index.html"
+                  target="_blank"
+                  class="btn btn-extra-large btn-dark-gray btn-hover-animation-switch btn-round-edge btn-box-shadow me-20px fw-400 xs-mt-10px xs-mb-10px"
+                >
+                  <span>
+                    <span class="btn-text">Discover crafto</span>
+                    <span class="btn-icon"
+                      ><i class="feather icon-feather-arrow-right"></i
+                    ></span>
+                    <span class="btn-icon"
+                      ><i class="feather icon-feather-arrow-right"></i
+                    ></span>
+                  </span>
+                </a>
+                <a
+                  href="index.html"
+                  target="_blank"
+                  class="btn btn-extra-large btn-white btn-round-edge btn-box-shadow btn-round-edge fw-600 xs-mt-10px xs-mb-10px"
+                  >Get started</a
+                >
+              </div>
+              <div
+                class="row w-100 position-absolute md-position-relative bottom-0 mb-14 md-mb-0 md-mt-40px sm-mt-30px xs-mt-20px align-items-center"
+                data-anime='{ "el": "childs", "opacity": [0, 1], "staggervalue": -200, "translateX": [-100, 0], "duration": 1000, "delay": 1700, "easing": "easeOutQuad" }'
+              >
                 <div
-                  class="feature-box feature-box-left-icon-middle overflow-hidden"
+                  class="col-xl-5 col-sm-6 icon-with-text-style-08 xs-mb-15px"
                 >
                   <div
-                    class="feature-box-icon feature-box-icon-rounded w-30px h-30px rounded-circle bg-jungle-green me-10px"
+                    class="feature-box feature-box-left-icon-middle overflow-hidden"
                   >
-                    <i class="fa-solid fa-check text-white fs-12"></i>
-                  </div>
-                  <div class="feature-box-content last-paragraph-no-margin">
-                    <span class="d-inline-block fs-17 fw-500 text-dark-gray"
-                      >Conversion strategy</span
+                    <div
+                      class="feature-box-icon feature-box-icon-rounded w-30px h-30px rounded-circle bg-jungle-green me-10px"
                     >
+                      <i class="fa-solid fa-check text-white fs-12"></i>
+                    </div>
+                    <div class="feature-box-content last-paragraph-no-margin">
+                      <span class="d-inline-block fs-17 fw-500 text-dark-gray"
+                        >Conversion strategy</span
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xl-5 col-sm-6 icon-with-text-style-08">
+                  <div
+                    class="feature-box feature-box-left-icon-middle overflow-hidden"
+                  >
+                    <div
+                      class="feature-box-icon feature-box-icon-rounded w-30px h-30px rounded-circle bg-jungle-green me-10px"
+                    >
+                      <i class="fa-solid fa-check text-white fs-12"></i>
+                    </div>
+                    <div class="feature-box-content last-paragraph-no-margin">
+                      <span class="d-inline-block fs-17 fw-500 text-dark-gray"
+                        >Targeted growth</span
+                      >
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="col-xl-5 col-sm-6 icon-with-text-style-08">
-                <div
-                  class="feature-box feature-box-left-icon-middle overflow-hidden"
-                >
-                  <div
-                    class="feature-box-icon feature-box-icon-rounded w-30px h-30px rounded-circle bg-jungle-green me-10px"
-                  >
-                    <i class="fa-solid fa-check text-white fs-12"></i>
-                  </div>
-                  <div class="feature-box-content last-paragraph-no-margin">
-                    <span class="d-inline-block fs-17 fw-500 text-dark-gray"
-                      >Targeted growth</span
-                    >
-                  </div>
-                </div>
+            </div>
+            <div
+              class="col-lg-5 offset-lg-1 col-md-3 align-self-end d-none d-md-inline-block"
+            >
+              <div
+                class="position-absolute right-0px bottom-minus-90px xxl-bottom-minus-30px md-bottom-minus-35px md-right-minus-250px lg-right-minus-150px w-50 xl-w-55 lg-w-65 md-w-75 overflow-hidden"
+              >
+                <img
+                  src="https://via.placeholder.com/950x970"
+                  class="w-100"
+                  alt=""
+                  data-anime='{ "opacity": [0, 1], "translateX": [100, 0], "duration": 1000, "delay": 200, "easing": "easeOutQuad" }'
+                />
               </div>
-            </div>
-          </div>
-          <div
-            class="col-lg-5 offset-lg-1 col-md-3 align-self-end d-none d-md-inline-block"
-          >
-            <div
-              class="position-absolute right-0px bottom-minus-90px xxl-bottom-minus-30px md-bottom-minus-35px md-right-minus-250px lg-right-minus-150px w-50 xl-w-55 lg-w-65 md-w-75 overflow-hidden"
-            >
-              <img
-                src="https://via.placeholder.com/950x970"
-                class="w-100"
-                alt=""
-                data-anime='{ "opacity": [0, 1], "translateX": [100, 0], "duration": 1000, "delay": 200, "easing": "easeOutQuad" }'
-              />
-            </div>
-            <div
-              class="position-absolute right-0px top-0 me-3 mt-20 md-mt-45 lg-w-250px lg-mt-45 animation-float overflow-hidden d-none d-lg-inline-block"
-              data-bottom-top="transform: translateY(-30px)"
-              data-top-bottom="transform: translateY(80px)"
-            >
-              <img
-                src="images/demo-marketing-home-02.jpg"
-                class="border-radius-6px box-shadow-quadruple-large"
-                alt=""
-                data-anime='{ "opacity": [0, 1], "clipPath": ["inset(0 0 200px 0)", "inset(0px 0px 0px 0px)"], "duration": 1000, "delay": 1000, "easing": "easeOutQuad" }'
-              />
+              <div
+                class="position-absolute right-0px top-0 me-3 mt-20 md-mt-45 lg-w-250px lg-mt-45 animation-float overflow-hidden d-none d-lg-inline-block"
+                data-bottom-top="transform: translateY(-30px)"
+                data-top-bottom="transform: translateY(80px)"
+              >
+                <img
+                  src="images/demo-marketing-home-02.jpg"
+                  class="border-radius-6px box-shadow-quadruple-large"
+                  alt=""
+                  data-anime='{ "opacity": [0, 1], "clipPath": ["inset(0 0 200px 0)", "inset(0px 0px 0px 0px)"], "duration": 1000, "delay": 1000, "easing": "easeOutQuad" }'
+                />
+              </div>
             </div>
           </div>
         </div>
