--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 class="position-absolute right-0px bottom-minus-90px xxl-bottom-minus-30px md-bottom-minus-35px md-right-minus-250px lg-right-minus-150px w-50 xl-w-55 lg-w-65 md-w-75 overflow-hidden"
               >
                 <img
-                  src="https://via.placeholder.com/950x970"
+                  src="images/ECS India Image/ECS-India-Hero.png"
                   class="w-100"
                   alt=""
                   data-anime='{ "opacity": [0, 1], "translateX": [100, 0], "duration": 1000, "delay": 200, "easing": "easeOutQuad" }'
@@ -635,7 +635,7 @@
                 <div class="portfolio-box">
                   <div class="portfolio-image border-radius-6px">
                     <a href="demo-marketing-single-project-simple.html">
-                      <img src="https://via.placeholder.com/800x635" alt="" />
+                      <img src="images/ECS India Image/Cloud.png" alt="" />
                     </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px">
@@ -657,7 +657,7 @@
                 <div class="portfolio-box">
                   <div class="portfolio-image border-radius-6px">
                     <a href="demo-marketing-single-project-simple.html">
-                      <img src="https://via.placeholder.com/800x635" alt="" />
+                      <img src="images/ECS India Image/Digital Marketing.png" alt="" />
                     </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px">
@@ -679,7 +679,7 @@
                 <div class="portfolio-box">
                   <div class="portfolio-image border-radius-6px">
                     <a href="demo-marketing-single-project-simple.html">
-                      <img src="https://via.placeholder.com/800x635" alt="" />
+                      <img src="images/ECS India Image/Products.png" alt="" />
                     </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px">
@@ -701,7 +701,7 @@
                 <div class="portfolio-box">
                   <div class="portfolio-image border-radius-6px">
                     <a href="demo-marketing-single-project-simple.html">
-                      <img src="https://via.placeholder.com/800x635" alt="" />
+                      <img src="images/ECS India Image/Services.png" alt="" />
                     </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px">
@@ -723,7 +723,7 @@
                 <div class="portfolio-box">
                   <div class="portfolio-image border-radius-6px">
                     <a href="demo-marketing-single-project-simple.html">
-                      <img src="https://via.placeholder.com/800x635" alt="" />
+                      <img src="images/ECS India Image/Solutions.png" alt="" />
                     </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px">
@@ -745,7 +745,7 @@
                 <div class="portfolio-box">
                   <div class="portfolio-image border-radius-6px">
                     <a href="demo-marketing-single-project-simple.html">
-                      <img src="https://via.placeholder.com/800x635" alt="" />
+                      <img src="images/ECS India Image/Cloud.png" alt="" />
                     </a>
                   </div>
                   <div class="portfolio-caption pt-30px pb-30px">
