--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a href="students_programming" class="nav-link"
+                  <a href="students_program" class="nav-link"
                     ><span class="badge_highlight"
                       >Students Program</span
                     ></a
